# rust-training

collections/: Cargo.toml
collections/src/: main.rs
communicator/: Cargo.toml
communicator/src/: client.rs  lib.rs  main.rs  network.rs  outermost.rs
communicator/src/network/: server.rs
difref/: Cargo.toml
difref/src/: main.rs
enumer/: Cargo.toml
enumer/src/: main.rs
first_word/: Cargo.toml
first_word/src/: main.rs
minigrep/: Cargo.toml
minigrep/src/: lib.rs  main.rs
simple_server/: Cargo.toml
simple_server/src/: lib.rs  main.rs
structer/: Cargo.toml
structer/src/: main.rs
