[package]
name = "simple_server"
version = "0.1.0"
authors = ["yochidros <mm9.movement.trb@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.13.0"
tokio = { version = "0.2", features = ["full"] }

failure = "0.1.0"
reqwest = "0.9.24"
